--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,6 +20,16 @@
     "mongodb": "^6.21.0"
   },
   "devDependencies": {
-    "@types/node": "^25.0.3"
+    "@babel/plugin-transform-runtime": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/runtime": "^7.28.6",
+    "@sentry/node": "^10.38.0",
+    "@sentry/tracing": "^7.120.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^11.0.1",
+    "supertest": "^7.2.2"
   }
 }
