--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
@@ -16,7 +21,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
-    "jspdf": "^3.0.4",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.298.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -28,15 +33,26 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
+    "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^30.2.0",
+    "cypress": "^15.9.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^7.2.4"
